force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__Identifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__Identifier__c</fullName>
    <label>Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Identifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>