force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__PersonEducationVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonEducationVerificationStatus__c</fullName>
    <label>Person Education Verification Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonEducationVerificationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>