force-app/main/default/objects/ssot__PersonEducation__dlm/fields/ssot__VerifiedOnDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__VerifiedOnDate__c</fullName>
    <label>Verified On Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VerifiedOnDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>